--- a/aboutme.html
+++ b/aboutme.html
@@ -9,7 +9,7 @@
 <body>
     <header class="cabecalho">
         <nav class="cabecalho__menu">
-            <a class="cabecalho__menu_links" href="inedex.html">Home</a>
+            <a class="cabecalho__menu_links" href="inedx.html">Home</a>
             <a class="cabecalho__menu_links" href="aboutme.html">Sobre Mim</a>
         </nav>
     </header>
