--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!--Cabeçalho-->
     <header class="cabecalho">
         <nav class="cabecalho__menu">
-            <a class="cabecalho__menu_links" href="inedex.html">Home</a>
+            <a class="cabecalho__menu_links" href="index.html">Home</a>
             <a class="cabecalho__menu_links" href="aboutme.html">Sobre Mim</a>
         </nav>
     </header>
